--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,17 +9,17 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="name_of_community">Name of Community</string>
+    <string name="community_assigned_to">Community Assigned To</string>
+    <string name="dialog_message" />
 
     <string-array name="community_array">
-        <item>Enterprise.Net</item>
-        <item>Full-stack Web</item>
-        <item>Quality Engineer</item>
-        <item>Cloud and DevOps</item>
-        <item>Big Data and Analytics</item>
-        <item>Product Delivery</item>
-        <item>Enterprise Coffee</item>
-        <item>Mobile</item>
-        <item>Research and Development</item>
+        <item>Baron Patrick Paredes</item>
+        <item>Gilberto Bernardo Morales</item>
+        <item>Lloyd Joseph Miguel</item>
+        <item>Rennor Galicia</item>
+        <item>Zack Zabala</item>
+
     </string-array>
 
 
