--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,8 @@
     <string name="name_of_community">Name of Community</string>
     <string name="save">SAVE</string>
     <string name="community_assigned_to">Community Assigned To</string>
+    <string name="community_Title">Community</string>
+    <string name="CommunityName">Community Name</string>
+    <string name="community_selection_page">Community Selection Page</string>
+    <string name="listCommunity">List of Commnunity</string>
 </resources>
