--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,7 @@
     <string name="CommunityName">Community Name</string>
     <string name="community_selection_page">Community Selection Page</string>
     <string name="listCommunity">List of Commnunity</string>
+    <string name="community_update_page">Community Update Page</string>
+    <string name="update">UPDATE</string>
+    <string name="required_field">Required Field</string>
 </resources>
