--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,6 @@
     <string name="community_update_page">Community Update Page</string>
     <string name="update">UPDATE</string>
     <string name="required_field">Required Field</string>
+    <string name="community_admin_page">Admin Community Page</string>
+    <string name="resource_page">Resource Details Page</string>
 </resources>
