--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,7 @@
     <string name="action_sign_in_short">Sign in</string>
     <string name="welcome">"Welcome !"</string>
     <string name="invalid_username">Username must be Email</string>
+    <string name="invalid_usernameError">Username is Required</string>
     <string name="invalid_password">Password is Required</string>
     <string name="login_failed">"Login failed"</string>
     <string name="login_title">Please log in to your credential.</string>
